$NetBSD: CHANGES-2025,v 1.642 2025/01/27 13:29:48 wiz Exp $

Changes to the packages collection and infrastructure in 2025:

	Updated textproc/R-rmarkdown to 2.29 [mef 2025-01-01]
	Updated www/R-pkgdown to 2.1.1 [mef 2025-01-01]
	Updated sysutils/sysbuild to 2.8 [jmmv 2025-01-01]
	Updated mail/thunderbird to 128.5.2 [ryoon 2025-01-01]
	Updated mail/thunderbird-l10n to 128.5.2 [ryoon 2025-01-01]
	Updated databases/duckdb to 1.1.3 [ryoon 2025-01-01]
	Updated www/R-rvest to 1.0.4 [mef 2025-01-01]
	Updated parallel/R-promises to 1.3.2 [mef 2025-01-01]
	Updated www/R-shiny to 1.10.0 [mef 2025-01-01]
	Updated graphics/darktable to 5.0.0 [ryoon 2025-01-01]
	Updated audio/fluidsynth to 2.4.2 [ryoon 2025-01-01]
	Updated www/R-webshot to 0.5.5 [mef 2025-01-01]
	Updated textproc/R-DT to 0.33 [mef 2025-01-01]
	Updated sysutils/broot to 1.44.4 [pin 2025-01-01]
	Updated devel/cargo-release to 0.25.15 [pin 2025-01-01]
	Updated textproc/clicsv to 1.0.8 [pin 2025-01-01]
	Updated sysutils/onefetch to 2.23.1 [pin 2025-01-01]
	Updated archivers/R-brotli to 1.3.1 [mef 2025-01-01]
	Updated textproc/R-Rdpack to 2.6.2 [mef 2025-01-01]
	Updated textproc/R-brew to 1.0.10 [mef 2025-01-01]
	Updated textproc/R-commonmark to 1.9.2 [mef 2025-01-01]
	Updated mail/p5-Mail-Message to 3.016 [wen 2025-01-02]
	Updated databases/ruby-sequel to 5.88.0 [taca 2025-01-02]
	Updated databases/ruby-sqlite3 to 2.5.0 [taca 2025-01-02]
	Updated databases/ruby-tiny_tds to 3.0.0 [taca 2025-01-02]
	Updated devel/ruby-ffi to 1.17.1 [taca 2025-01-02]
	Updated devel/ruby-irb to 1.14.3 [taca 2025-01-02]
	Updated devel/ruby-rake-compiler to 1.2.9 [taca 2025-01-02]
	Updated devel/ruby-reline to 0.6.0 [taca 2025-01-02]
	Updated devel/ruby-regexp_parser to 2.10.0 [taca 2025-01-02]
	Updated misc/ruby-pry to 0.15.2 [taca 2025-01-02]
	Updated net/ruby-net-imap to 0.5.4 [taca 2025-01-02]
	Updated security/ruby-rex-mime to 0.1.10 [taca 2025-01-02]
	Updated textproc/ruby-csv to 3.3.2 [taca 2025-01-02]