@@ -1,1 +1,0 @@
-This package contains the Tcl language binding for the PDFlib library.
